--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "GoogleTranslateDesktop",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
+    "electron": "^6.0.12",
+    "electron-packager": "^14.0.6",
     "electron-prebuilt": "^1.4.13",
     "electron-store": "^5.0.0"
   }
